--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </svg>
             </div>
             
-            <div id="word-to-say" class="text-6xl md:text-8xl font-black text-slate-900 mb-4 lowercase whitespace-nowrap">---</div>
+            <div id="word-to-say" class="text-6xl md:text-8xl font-black text-slate-900 mb-4 whitespace-nowrap">---</div>
             <p id="instruction" class="text-slate-500 text-xl mb-8 font-bold">Click to start!</p>
 
             <div id="speech-feedback" class="p-6 bg-purple-50 rounded-xl text-purple-800 font-bold text-2xl hidden">
