--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <header id="app-header" class="relative overflow-hidden bg-white pt-16 pb-24 border-b border-slate-100 text-center">
         <h1 class="text-5xl md:text-7xl font-black text-slate-900 leading-tight mb-6 uppercase">
-            <span class="text-sparkle">Speak </span> the words you <span class="text-sparkle">SEE</span>
+            <span class="sparkel-text">Speak </span> the words you <span class="sparkel-text">SEE</span>
         </h1>
         <p class="text-xl text-slate-500">Read 20 words to get your score!</p>
     </header>
