--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
 
-Yes, we can absolutely bring that back! It is very helpful for students to see exactly what the AI heard so they can adjust their pronunciation.
-
-I have updated the logic inside the onresult function. Now, if the student gets the word wrong on their first try, it will display: "❌ I heard you say [word]. Try again!"
-
-The Updated Master Code
-This version includes the Success Chord, the Red Pulsing Mic, the 20-word session, and the "I heard you say" feedback.
-
-HTML
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -61,7 +53,7 @@ HTML
 
     <header id="app-header" class="relative overflow-hidden bg-white pt-16 pb-24 border-b border-slate-100 text-center">
         <h1 class="text-5xl md:text-7xl font-black text-slate-900 leading-tight mb-6 uppercase">
-            Speak the words you <span class="text-purple-600">SEE</span>
+            <span class="sparkle-text">Speak </span>the words you <span class="sparkle-text">SEE!</span>
         </h1>
         <p class="text-xl text-slate-500">Read 20 words to get your score!</p>
     </header>
